{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 214,
  "lineage": "09de6af7-ea57-504c-87a1-25629bb9d7b8",
  "resources": [
    {
      "module": "module.Netflix_Scale_Set[\"1\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NFSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/Netflix-Resources/providers/Microsoft.Network/networkSecurityGroups/NetflixSecurityGroup1",
            "location": "francecentral",
            "name": "NetflixSecurityGroup1",
            "resource_group_name": "Netflix-Resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allowSSH",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.NetflixRG"
          ]
        }
      ]
    },
    {
      "module": "module.Netflix_Scale_Set[\"1\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "NVNSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/Netflix-Resources/providers/Microsoft.Network/virtualNetworks/Netflix-Vertual-Network1/subnets/Netflix-Subnet1",
            "name": "Netflix-Subnet1",
            "resource_group_name": "Netflix-Resources",
            "virtual_network_name": "Netflix-Vertual-Network1"
          },
          "dependencies": [
            "azurerm_resource_group.NetflixRG",
            "module.Netflix_Scale_Set.azurerm_virtual_network.NetflixVN"
          ]
        }
      ]
    },
    {
      "module": "module.Netflix_Scale_Set[\"1\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "NetflixVN",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "4ed70708-e88d-4b07-b829-a9bdede82d8a",
            "id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/Netflix-Resources/providers/Microsoft.Network/virtualNetworks/Netflix-Vertual-Network1",
            "location": "francecentral",
            "name": "Netflix-Vertual-Network1",
            "resource_group_name": "Netflix-Resources",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.NetflixRG"
          ]
        }
      ]
    },
    {
      "module": "module.Netflix_Scale_Set[\"2\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NFSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/Netflix-Resources/providers/Microsoft.Network/networkSecurityGroups/NetflixSecurityGroup2",
            "location": "australiacentral",
            "name": "NetflixSecurityGroup2",
            "resource_group_name": "Netflix-Resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allowSSH",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.NetflixRG"
          ]
        }
      ]
    },
    {
      "module": "module.Netflix_Scale_Set[\"2\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "NVNSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/Netflix-Resources/providers/Microsoft.Network/virtualNetworks/Netflix-Vertual-Network2/subnets/Netflix-Subnet2",
            "name": "Netflix-Subnet2",
            "resource_group_name": "Netflix-Resources",
            "virtual_network_name": "Netflix-Vertual-Network2"
          },
          "dependencies": [
            "azurerm_resource_group.NetflixRG",
            "module.Netflix_Scale_Set.azurerm_virtual_network.NetflixVN"
          ]
        }
      ]
    },
    {
      "module": "module.Netflix_Scale_Set[\"2\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "NetflixVN",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "d925210f-1355-4f6a-afb2-00126b7b1c4f",
            "id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/Netflix-Resources/providers/Microsoft.Network/virtualNetworks/Netflix-Vertual-Network2",
            "location": "australiacentral",
            "name": "Netflix-Vertual-Network2",
            "resource_group_name": "Netflix-Resources",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.NetflixRG"
          ]
        }
      ]
    },
    {
      "module": "module.Netflix_Scale_Set[\"3\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NFSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/Netflix-Resources/providers/Microsoft.Network/networkSecurityGroups/NetflixSecurityGroup3",
            "location": "japaneast",
            "name": "NetflixSecurityGroup3",
            "resource_group_name": "Netflix-Resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allowSSH",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.NetflixRG"
          ]
        }
      ]
    },
    {
      "module": "module.Netflix_Scale_Set[\"3\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "NVNSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/Netflix-Resources/providers/Microsoft.Network/virtualNetworks/Netflix-Vertual-Network3/subnets/Netflix-Subnet3",
            "name": "Netflix-Subnet3",
            "resource_group_name": "Netflix-Resources",
            "virtual_network_name": "Netflix-Vertual-Network3"
          },
          "dependencies": [
            "azurerm_resource_group.NetflixRG",
            "module.Netflix_Scale_Set.azurerm_virtual_network.NetflixVN"
          ]
        }
      ]
    },
    {
      "module": "module.Netflix_Scale_Set[\"3\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "NetflixVN",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "a65a9507-bacb-477c-b088-326f77b1c903",
            "id": "/subscriptions/2777f8cf-4e6a-4dc7-a170-2ac2d0cd9491/resourceGroups/Netflix-Resources/providers/Microsoft.Network/virtualNetworks/Netflix-Vertual-Network3",
            "location": "japaneast",
            "name": "Netflix-Vertual-Network3",
            "resource_group_name": "Netflix-Resources",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.NetflixRG"
          ]
        }
      ]
    }
  ]
}